--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,14 @@
     <div id="chats">
       <!-- 자유롭게 HTML을 작성하세요 -->
     </div>
-
+    <select>
+      <option> 박스 1</option>
+      <option> 박스 2</option>
+      <option> 박스 3</option>
+      <option> 박스 4</option>
+    </select>
+    <button>summit</button>
+    <input></input>
     <script src="scripts/app.js"></script>
   </body>
 </html>
