--- a/client/index.html
+++ b/client/index.html
@@ -13,10 +13,10 @@
     <div>
       <span id="romeTitle">Room: </span>
       <select>
-        <option> 박스 1</option>
-        <option> 박스 2</option>
-        <option> 박스 3</option>
-        <option> 박스 4</option>
+        <option> 코드스테이츠</option>
+        <option> 로비</option>
+        <option> 테스트중입니다</option>
+        <option> 나의 채팅 메시지</option>
       </select>
     </div>
     <div id="summitArea">
