--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,8 @@
     <h1>chatterbox</h1>
     <div>
       <span id="romeTitle">Room: </span>
-      <select>
-        <option> 코드스테이츠</option>
-        <option> 로비</option>
-        <option> 테스트중입니다</option>
-        <option> 나의 채팅 메시지</option>
+      <select id="roomselector">
+
       </select>
     </div>
     <div id="summitArea">
