completed chatter client

--- a/client/index.html
+++ b/client/index.html
@@ -13,12 +13,14 @@
     <div>
       <span id="romeTitle">Room: </span>
       <select id="roomselector">
-
       </select>
     </div>
     <div id="summitArea">
-      <textarea id="userInput" rows="2" cols="80"></textarea>
+      <textarea id="userInput" rows="2" cols="65"></textarea>
       <button id="summitButton">summit</button>
+      <span class="spinner">
+        <img src="./images/spiffygif_46x46.gif">
+      </span>
     </div>
   </div>
 
