--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,9 @@
       </select>
     </div>
     <div id="summitArea">
-      <textarea id="userInput" rows="2" cols="65"></textarea>
+      <textarea id="idInput" rows="2" cols="30" placeholder="ID"></textarea>
+      <textarea id="roomNameInput" rows="2" cols="30" placeholder="방이름"></textarea>
+      <textarea id="userInput" rows="2" cols="65" placeholder="내용"></textarea>
       <button id="summitButton">summit</button>
       <span class="spinner">
         <img src="./images/spiffygif_46x46.gif">
